# RoadSolSafe-

./: .dockerignore  .env.example  .gitignore  Anchor.toml  BACKEND_SOLANA_ENDPOINT.md  DESIGN_MIGRATION_COMPLETE.md  DEVELOPMENT_BUILD_GUIDE.md  Dockerfile  ENV_SETUP_GUIDE.md  FRONTEND_SETUP_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  LOCK_IN_DAY_5_SUMMARY.md  MVP_1_WEEK_IMPLEMENTATION_GUIDE.md  README.md  README_DEPENDENCY_FIX.md  START_TESTING_NOW.md  YOUR_NEXT_STEPS_RIGHT_NOW.md  babel.config.js  check_dev2_wallet.bat  check_dev2_wallet.sh  deploy.bat  deploy.sh  deploy_program.sh  docker-compose.yml  get_sol.bat  get_sol.sh  import_phantom_wallet.sh  import_phantom_wallet_correct.sh  import_phantom_wallet_fixed.sh  jest.config.js  package-lock.json  package.json  simple-server.js  test_program.rs  tsconfig.json  vite.config.ts
.expo/: settings.json
app_backup/solana/: useProgram.ts
app_backup/solana/client/: pda.ts  rpc.ts
programs/driver_trip_reward/: Cargo.toml
programs/driver_trip_reward/src/: lib.rs
src/__tests__/: setup.ts
src/mobile-app/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
src/mobile-app/__tests__/: Integration.test.ts  RealMagicBlockPERService.test.ts
src/mobile-app/components/: WalletConnection.tsx
src/mobile-app/config/: walletConfig.ts
src/mobile-app/context/: ThemeContext.tsx
src/mobile-app/screens/: LeaderboardScreen.tsx  MapScreen.tsx  ProfileScreen.tsx  QuestsScreen.tsx  SocialsScreen.tsx
src/server/: app.ts  index.ts  package-lock.json  package.json  server.ts  start.js
tests/: driver_trip_reward.ts
(+43 files in other folders)
